# spongefish

./: .gitignore  Cargo.toml  README.md  RELEASE.md  release-plz.toml
.github/workflows/: docs.yml  lint-fmt.yml  pr.yml  release.yml  rust.yml  typos.yml
circuit/: Cargo.toml
circuit/src/: allocator.rs  lib.rs  permutation.rs  tests.rs
circuit/tests/: builder.rs
codecs-arkworks-algebra/: Cargo.toml
codecs-arkworks-algebra/src/: deserialize.rs  domain_separator.rs  lib.rs  prover_messages.rs  tests.rs  verifier_messages.rs
codecs-zkcrypto-group/: Cargo.toml
core/: Cargo.toml  TODO
core/examples/: bulletproof.rs  schnorr.rs
core/src/: codecs.rs  duplex_sponge.rs  errors.rs  io.rs  keccak.rs  lib.rs  narg.rs  prover.rs  sho.rs  tests.rs  verifier.rs
core/src/backend/: tests.rs  traits.rs
core/src/backend/arkworks/: domain_separator.rs
core/src/codecs/: mod.rs
core/src/codecs/arkworks_algebra/: prover_messages.rs  verifier_messages.rs
core/src/domain_separator/: mod.rs  sho.rs
core/src/domain_separator/pattern/: interaction_pattern.rs  pattern_state.rs
core/src/domain_separator/safe/: mod.rs
core/src/drivers/: ark_ec_impl.rs  ark_ff_impl.rs  bls12_381_impl.rs  curve25519_dalek_impl.rs  mod.rs  p3_babybear.rs  p3_koalabear.rs  secp256k1_impl.rs  tests.rs  traits.rs
core/src/drivers/arkworks/: deserialize.rs  mod.rs  prover_messages.rs  tests.rs  verifier_messages.rs
core/src/duplex_sponge/: interface.rs  legacy.rs  mod.rs  unit.rs
core/src/instantiations/: hash.rs  mod.rs  tests.rs  xof.rs
core/src/instantiations/permutations/: ascon.rs  keccak.rs  mod.rs
core/src/serialization/: mod.rs
derive/: Cargo.toml
derive/src/: lib.rs
poseidon2/: Cargo.toml
poseidon2/examples/: schnorr_algebraic_hash.rs
poseidon2/src/: bls12_381.rs  bn254.rs  lib.rs
pow/: Cargo.toml
pow/src/: blake3.rs  lib.rs
scripts/: bump-workspace-minor.sh
spongefish/: Cargo.toml  TODO
spongefish-anemoi/src/: lib.rs
spongefish-derive/: Cargo.toml
spongefish-derive/src/: lib.rs
spongefish-poseidon/examples/: schnorr_algebraic_hash.rs
spongefish-poseidon/src/: lib.rs  tests.rs
spongefish-pow/src/: blake3.rs  lib.rs
spongefish/examples/: bulletproof.rs  schnorr.rs
spongefish/src/: codecs.rs  domain_separator.rs  duplex_sponge.rs  error.rs  errors.rs  io.rs  keccak.rs  lib.rs  narg.rs  narg_prover.rs  narg_verifier.rs  prover.rs  prover_rng.rs  prover_state.rs  sho.rs  tests.rs  traits.rs  unit_traits.rs  verifier.rs  verifier_state.rs
spongefish/src/codecs/: bytes.rs  mod.rs  traits.rs  unit.rs  zerocopy.rs
spongefish/src/codecs/arkworks/: ark_serialize.rs  bytes.rs  field.rs  field_bytes.rs  fp_unit.rs  mod.rs  serialize.rs  tests.rs
spongefish/src/codecs/arkworks_algebra/: deserialize.rs  domain_separator.rs  mod.rs  prover_messages.rs  tests.rs  verifier_messages.rs
spongefish/src/codecs/zkcrypto_group/: deserialize.rs  domain_separator.rs  prover_messages.rs  verifier_messages.rs
spongefish/src/domain_separator/: mod.rs  sho.rs  traits.rs
spongefish/src/domain_separator/drivers/: mod.rs
spongefish/src/domain_separator/pattern/: interaction.rs  interaction_pattern.rs  mod.rs  pattern_player.rs
spongefish/src/drivers/: ark_ec_impl.rs  ark_ff_impl.rs  bls12_381_impl.rs  curve25519_dalek_impl.rs  mod.rs  p256_impl.rs  p3_baby_bear.rs  p3_koala_bear.rs  p3_mersenne31.rs  p3_poseidon2.rs  risc0_zkp_impl.rs  secp256k1_impl.rs  tests.rs
spongefish/src/duplex_sponge/: interface.rs  legacy.rs  mod.rs  unit.rs
spongefish/src/instantiations/: hash.rs  mod.rs  permutations.rs  xof.rs
spongefish/src/instantiations/permutations/: ascon.rs  keccak.rs  mod.rs
spongefish/src/pattern/: interaction.rs  interaction_pattern.rs  mod.rs  pattern_state.rs
spongefish/src/prover/: mod.rs  prover_state.rs  rng.rs  traits.rs
spongefish/src/transcript/: interaction.rs  mod.rs  pattern_state.rs  transcript_pattern.rs  transcript_player.rs  transcript_recorder.rs
spongefish/src/verifier/: mod.rs  traits.rs  verifier_state.rs
spongefish/tests/: derive_generics.rs  test_spec.rs
