[workspace]
members = [
    "spongefish",
    "derive",
    "pow",
    "poseidon2",
    "circuit",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
version = "1.0.0-rc1"

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"
missing_safety_doc = "allow"
many_single_char_names = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
too_long_first_doc_paragraph = "allow"
doc_lazy_continuation = "allow"
tuple_array_conversions = "allow"
naive_bytecount = "allow"

[workspace.dependencies]
ark-bls12-381 = "^0.5"
ark-bn254 = "^0.5"
ark-curve25519 = "^0.5"
ark-ec = "^0.5"
ark-ff = "^0.5"
ark-pallas = "^0.5"
ark-serialize = "^0.5"
ark-secp256k1 = "^0.5"
ark-std = "^0.5"
ark-vesta = "^0.5"
arrayvec = "0.7.6"
blake2 = "^0.10.6"
blake3 = { version = "^1.7", features = ["traits-preview", "zeroize"] }
bls12_381 = "^0.8.0"
bytemuck = "^1.22"
curve25519-dalek = "^4.1"
digest = "^0.10.7"
hex = "0.4.3"
k256 = "^0.13"
k12 = "^0.3.0"
keccak = "^0.1.5"
spongefish = { path = "spongefish" }
spongefish-derive = { path = "derive" }
spongefish-poseidon2 = { path = "poseidon2" }
spongefish-circuit = { path = "circuit" }
# p256 = "^0.13"
p3-baby-bear = "^0.3"
p3-field = "^0.3"
p3-koala-bear = "^0.3"
p3-mersenne-31 = "^0.3"
p3-poseidon2 = "^0.3"
p3-symmetric = "^0.3"
pallas = "^0.32"
rand = "^0.8.5"
rayon = "^1.10.0"
sha2 = "^0.10.7"
sha3 = "^0.10.8"
zeroize = "^1.8.1"

# Un-comment below for pulling zkp libraries from git.
[patch.crates-io]
# ark-std = { git = "https://github.com/arkworks-rs/utils" }
# ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
# ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
# ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
# ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra" }
# ark-curve25519 = { git = "https://github.com/arkworks-rs/algebra" }
# ark-pallas = { git = "https://github.com/arkworks-rs/algebra" }
# ark-vesta = { git = "https://github.com/arkworks-rs/algebra" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
