[package]
name = "codecs-zkcrypto-group"
version = "0.1.0"
edition = "2021"

[dependencies]
spongefish = { path = "../core" }
group = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bls12_381 = { workspace = true }
pallas = { workspace = true }
pasta_curves = { workspace = true }
curve25519-dalek = { workspace = true }