[package]
name = "spongefish-derive"
description = "Derive macros for the spongefish Fiat-Shamir library"
documentation = "https://docs.rs/spongefish-derive"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }

[dev-dependencies]
spongefish = { path = "../spongefish", default-features = false, features = ["sha3"] }
