[package]
name = "spongefish-poseidon"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT/Apache-2.0"

[lints]
workspace = true

[dependencies]
spongefish = { workspace = true, default-features = false }
# ark-ff = { workspace = true }
# zeroize = { workspace = true }
# ark-bls12-381 = { workspace = true, optional = true }
# ark-bn254 = { workspace = true, optional = true }
p3-poseidon2 = { workspace = true, optional = true }
p3-symmetric = { workspace = true, optional = true }
p3-koala-bear = { workspace = true, optional = true }
p3-baby-bear = { workspace = true, optional = true }


[dev-dependencies]
# ark-bls12-381 = { workspace = true, optional = true }
# ark-ec = { workspace = true }
# ark-std = { workspace = true }
# hex = { workspace = true }
# blake2 = { workspace = true }

[features]
# arkworks
# bn254 = ["ark-bn254"]
# solinas = []
# bls12-381 = ["spongefish/ark-ec", "dep:ark-bls12-381"]
# ark-bls12-381 = ["spongefish/ark-ec", "dep:ark-bls12-381"]

# plonky3
p3-koala-bear = ["spongefish/p3-koala-bear", "dep:p3-symmetric", "dep:p3-koala-bear"]
p3-baby-bear = ["spongefish/p3-baby-bear", "dep:p3-symmetric", "dep:p3-baby-bear"]

[[example]]
name = "schnorr_algebraic_hash"
required-features = ["ark-bls12-381"]
