[package]
name = "spongefish"
version = "0.2.0"
authors = [
    "Michele Orrù <m@orru.net>",
    "Giacomo Fenzi <giacomofenzi@outlook.com>",
]
description = "A library for Fiat-Shamir transcripts."
edition = "2021"
license = "BSD-3-Clause"

[lints]
workspace = true

[dependencies]
zeroize = { workspace = true, features = ["zeroize_derive"] }
rand = { workspace = true, features = ["getrandom"] }
digest = { workspace = true }
# used as default hasher for the prover
keccak = { workspace = true }
# optional dependencies
ark-ff = { workspace = true, optional = true }
ark-ec = { workspace = true, optional = true }
ark-serialize = { workspace = true, features = ["std"], optional = true }
group = { workspace = true, optional = true }
hex = { workspace = true }
zerocopy = { version = "0.8.25", features = ["std"], optional = true }
postcard = { version = "1.1.1", optional = true }
thiserror = "2.0.12"

[features]
default = ["arkworks-algebra", "zerocopy"]
arkworks-algebra = ["dep:ark-ff", "dep:ark-ec", "dep:ark-serialize"]
zkcrypto-group = ["dep:group"]
zerocopy = ["dep:zerocopy"]
ark-serialize = ["dep:ark-serialize"]
serde-postcard = ["dep:postcard"]
asm = ["keccak/asm", "keccak/simd"]

[dev-dependencies]
ark-std = { workspace = true }
sha2 = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }
# test curve25519 compatibility
curve25519-dalek = { workspace = true, features = ["group"] }
ark-curve25519 = { workspace = true }
# test algebraic hashers
bls12_381 = { workspace = true }
ark-bls12-381 = { workspace = true, features = ["std"] }
ark-pallas = { workspace = true, features = ["std"] }
pallas = { workspace = true }
pasta_curves = { workspace = true }
ark-vesta = { workspace = true, features = ["std"] }
sha3 = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "../doc/katex-header.html",
    "--cfg",
    "docsrs",
]
features = ["ark", "group"]

[[example]]
name = "schnorr"
required-features = ["arkworks-algebra"]

[[example]]
name = "bulletproof"
required-features = ["arkworks-algebra"]
